# fluid-simulation

./: CMakeLists.txt  Procfile  README.md  package-lock.json  package.json  start.js
desktop/: run.sh
desktop/shaders/compute/: advect.glsl  advect_boundary.glsl  advect_color.glsl  apply_force.glsl  diffuse.glsl  divergence_calc.glsl  gradient_sub.glsl  pressure_boundary.glsl  pressure_solve.glsl  set_color.glsl
desktop/shaders/fragment/: color.glsl  velocity.glsl
desktop/shaders/vertex/: simple.glsl
desktop/src/: compute_shader.cpp  compute_shader.h  graphic_shader.cpp  graphic_shader.h  main.cpp  swap_texture.h  texture.h
public/: index.html  index2.html
public/css/: style.css
public/js/: half.js  quad.js  script.js  script_mac.js  support.js  test.js  texture.js
shaders/compute/: apply_force.glsl  divergence_calc.glsl  pressure_solve.glsl
shaders/fragment/: simple.glsl
src/: compute_shader.cpp  compute_shader.h  gl_check.h  graphic_shader.h  quad.h
webgl/: package.json
webgl/css/: style.css
webgl/js/: texture.js
webgl/public/js/: shader.js
